<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pravallika.multiplealarms.activities.AlarmActivity">

    <LinearLayout
        android:id="@+id/setAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_clock"
            android:backgroundTint="@color/colorSecondaryText"
            android:padding="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/setTime"
            android:id="@+id/set_time"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setAlarm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/linear1">

        <Button
            android:text="@string/sunday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/sunday" />

        <Button
            android:text="@string/monday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/monday" />

        <Button
            android:text="@string/tuesday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/tuesday" />

        <Button
            android:text="@string/Wednesday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/wednesday" />

        <Button
            android:text="@string/thursday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/thursday"
            />
        <Button
            android:text="@string/Friday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/friday" />
        <Button
            android:text="@string/saturday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:id="@+id/saturday"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/linear2">

        <ImageView
            android:id="@+id/label_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_label"
            android:backgroundTint="@color/colorSecondaryText"
            android:padding="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AlarmHint"
            android:inputType="textShortMessage"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:text="@string/SetAlarm"
        android:id="@+id/setAlarmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linear2"
        android:textColor="@color/colorIcons" />

</RelativeLayout>
