<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pravallika.multiplealarms.activities.AlarmActivity">

    <TextView
        android:id="@+id/tv_alarm_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/setAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_clock"
            android:backgroundTint="@color/colorSecondaryText"
            android:padding="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/setTime"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setAlarm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/sunday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/sunday"
            android:textOff="S" />

        <ToggleButton
            android:id="@+id/monday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/monday"
            android:textOff="M" />

        <ToggleButton
            android:id="@+id/tuesday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/tuesday"
            android:textOff="T" />

        <ToggleButton
            android:id="@+id/wednesday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/Wednesday"
            android:textOff="W" />

        <ToggleButton
            android:id="@+id/thursday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/thursday"
            android:textOff="T" />

        <ToggleButton
            android:id="@+id/friday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/Friday"
            android:textOff="F" />

        <ToggleButton
            android:id="@+id/saturday"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_inactive"
            android:text="@string/saturday"
            android:textOff="S" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/label_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_label"
            android:backgroundTint="@color/colorSecondaryText"
            android:padding="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AlarmHint"
            android:inputType="textShortMessage"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_active"
        android:text="@string/SetAlarm"
        android:textColor="@color/colorIcons" />

</RelativeLayout>
