<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pravallika.multiplealarms.activities.MainActivity">

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/rectangle_active"
        android:text="@string/text_alarm"
        android:textColor="@color/colorIcons" />

    <Button
        android:id="@+id/btn_multiple_alarm"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_alarm"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_active"
        android:text="@string/text_multiple_alarm"
        android:textColor="@color/colorIcons" />

    <Button
        android:id="@+id/btn_reminder"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_alarm"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle_active"
        android:text="@string/text_reminder"
        android:textColor="@color/colorIcons" />
</RelativeLayout>
